--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -3,7 +3,7 @@
   padding: 0;
   user-select: none;
   box-sizing: border-box;
-  font-family: Roboto,Roboto Condensed,Generica, sans-serif;
+  /* font-family: Roboto,Roboto Condensed,Generica, sans-serif; */
   list-style: none;  
 }
 body{  
@@ -549,7 +549,7 @@ div p.elec-guide-txt{
   content: '';
   position: absolute;
   top: 0;
-  left: 0%; 100%;
+  left: 0% 100%;
   backgro
   width: 100%;
   height:und: rgba(73, 163, 0, 0.03);
