--- a/css/admin_css/style1_studAcc.css
+++ b/css/admin_css/style1_studAcc.css
@@ -8,13 +8,13 @@
 }
 body{  
   font-family: Roboto,Roboto Thin,Generica, sans-serif;  
-  background-image: url('../../img/adminBG.png');
+  background-image:url("../../img/adminBG.png");
   background-size: cover;
   font-size: 100%;
   background-attachment: fixed;
   width: auto;
 }
-nav{
+/* nav{
   background: #1d6986;
   box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
               0 3px 6px rgba(0, 0, 0, .23);
@@ -52,7 +52,7 @@ nav .logo{
   margin-top: 5px;
   margin-left: 40px;
   color:#ffffff;
-}
+} */
 nav ul{
   float: right;
   padding: 0;
@@ -260,7 +260,7 @@ nav ul ul ul li{
   }
   
 }
-/*ballesteros*/
+/*-------Student Management//Vote summary------*/
 nav h4{
   font-family: Roboto Regular, sans-serif;
   font-weight: inherit;
@@ -284,8 +284,9 @@ nav h5{
 }
 .cnavie ul li a{
   font-size: 1.05em;
+
 }
-.cheader {
+  .cheader {
     z-index: 100;
     padding: 1px 1px;
     font-size: 35px;
@@ -294,26 +295,30 @@ nav h5{
     width: 100%;
     text-align: center;
     font-family: Roboto Regular, sans-serif;
-    letter-spacing: 6px; 
-}
-.pagination>li {
-  display: inline;
-  padding:0px ;
-  margin:0px ;
-  border:none ;
-}
+    letter-spacing: 6px;
+  }
+  
+  
+  .pagination>li {
+    display: inline;
+    padding:0px ;
+    margin:0px ;
+    border:none ;
 
-.pagination > li > a, .pagination > li > span{background-color:#EEEEEE !important}
-.pagination > li.active > a, .pagination > li.active > span{background-color:#124254 !important}
+    }
+  .pagination > li > a, .pagination > li > span{background-color:#EEEEEE !important}
+  .pagination > li.active > a, .pagination > li.active > span{background-color:#124254 !important}
 
-.modal-backdrop {
-  z-index: -1!important;
-}
-iframe
-{
-  height:700px ;
-}
-.btn {
+  .modal-backdrop {
+      z-index: -1!important;
+    }
+
+    iframe
+    {
+        height:700px ;
+    }
+    
+    .btn {
     font-family: Roboto Regular, sans-serif;
     display: inline-block;
     padding: 6px 12px ;
@@ -343,6 +348,7 @@ iframe
     border-color: #5cb85c!important;
     box-shadow:none ;
     }
+    .btn-primary:hover{background-color: #4a934a!important;}
     .btn-danger {
     color: #fff ;
     margin: 0px;
@@ -351,131 +357,134 @@ iframe
     border-color: #d9534f!important;
     box-shadow:none ;
     }
+    .btn-danger:hover{background-color: #d93e39!important;}
     .btn-button1{
     color: #eeeeee ;
-    padding: 0px;
     background: #124254 ;
     border-color: #124254;
     box-shadow:none ; 
     padding: 10px 20px;
     margin: 25px 5px 15px 0px!important;      
     }
+    .btn-button1:hover{background-color:#18566e !important; color: #EEEEEE!important;}
     .btn-button2{
       color: #eeeeee ;
-      margin: 0px;
-      padding: 0px;
       background: #124254 ;
       border-color: #124254;
       box-shadow:none ; 
       padding: 10px 20px;
-      margin: 25px 5px 15px 5px!important;      
+      margin: 25px 5px 15px 0px!important;      
       }
+     .btn-button2:hover{background-color:#18566e !important; color: #EEEEEE!important;}
      .btn-button3{
       color: #eeeeee ;
-      margin: 0px;
-      padding: 0px;
       background: #124254 ;
       border-color: #124254;
       box-shadow:none ; 
       padding: 10px 20px;
-      margin: 25px 5px 15px 5px!important;      
+      margin: 25px 5px 15px 0px!important;      
       }
+      .btn-button3:hover{background-color:#18566e !important; color: #EEEEEE!important;}
+      @media only screen and (max-width: 350px) {
+        .btn-button1{
+          margin: 25px 5px 5px 0px!important;      
+          }
+        .btn-button2{
+          margin: 25px 0px 5px 0px!important;      
+            }
+        .btn-button3{
+          margin: 0px 0px 15px 0px!important;      
+      }
+    }
     .btn-button4{
         background: #dddddd ;
         box-shadow:none ;
         width: 15%; 
         margin: 25px 5px 15px 0px!important;      
-        }      
+        }
+    .btn-button4:hover{background-color: 	#c1c1c1!important;}          
    #save{
       color:#fff;
       background: #124254;
       margin-bottom: 5px; 
    }
+   #save:hover{background-color:#18566e !important; color: #EEEEEE!important;}  
 
    #cancel{
       background-color:#dddddd;
-      margin:auto;
+      margin:auto;}
+   #cancel:hover{background-color: 	#c1c1c1!important;}    
 
-   }
    #continue{
       background-color: #d9534f;
       color:#fff;
    }
+   #continue:hover{background-color: #C23B22 !important;} 
    #cancel2{
       background-color: #dddddd;
    }
+   #cancel2:hover{background-color: 	#c1c1c1!important;}  
    #go{
     color:#fff;
     background: #124254;
    }
+   #go:hover{background-color:#18566e !important; color: #EEEEEE!important;}   
    #go2{
     color:#fff;
     background: #124254;
    }
+   #go2:hover{background-color:#18566e !important; color: #EEEEEE!important;}  
 
 .container{
-  background-color:#dddddd;
-  padding: 1rem;
-  margin-top: 3%;
-  margin-bottom: 5%;
-  border: 2px solid #124254;
-  width: 80% !important;
-  height: auto;
-  opacity: 80%;
-  font-size: 10ptrem;
+    margin: 30px 15px 25px 15px;
+    border: 2px solid #124254;
+    height: 100%!important;
+    background:rgba(255,255,255, 0.7);
   }
-
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  .container {margin: 10px 0px 10px 0px;;}                     
+  .container {margin: 0px 0px 0px 0px;border: none; } 
+         
   }
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (max-width: 768px) {
-  .container {
-    margin: 10px 0px 10px 0px;
+ #datatable {
     width: 100%;
+    border: 1px solid #124254;
+    font-family: Roboto regular, sans-serif;
+    border-collapse: collapse;
+    table-layout: auto;
+    margin:0px;
+    text-align: center;
+    background:rgba(255,255,255, 0.6);
   }
+  
+  table.center {
+    margin-left:auto; 
+    margin-right:auto;
+    }
+  thead {
+    border: 1px solid #124254;
+    color: #EEEEEE;
+    background-color: #18566e;
+    text-align: center;
+  }
+  tbody {
+    border: 1px solid #124254;
+    }
+  th {
+      border: 1px solid #124254;
+      color: #EEEEEE;
+      background-color: #18566e;
+      text-align: center;
+
+    }
+  td {
+      border: 1px solid #124254;
+      padding: 0px;
+      max-width: 150px;
+      max-height: 150px;
+      overflow: hidden;
 }
-#datatable {
-  border-collapse: collapse !important;
-  table-layout: auto;
-  margin: 0px;
-  text-align: center;
-  overflow-y:scroll;
-  overflow-x:hidden !important;
-  opacity: 100%;
-  width: 100% !important;
-  background: rgba(255, 255, 255, .9);
-}
-thead {
-  width: 100%;
-  color: #EEEEEE;
-  background-color: #18566e;
-  text-align: center;
-  opacity: 100%;
-}
-thead input {
-  width: 100%;
-}
-th {
-  color: #ffffff;
-  background-color: #18566e;
-  text-align: center;
-  font-size: 10pt;
-  font-family: Roboto regular, sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px; 
-  border: 1px solid #124254 !important;
-}
-td {
-  border: 1px solid #124254;
-  padding: 0px;
-  max-width: auto;
-  height: 30px;
-  overflow: hidden !important;
-  font-size: 10p
-}
+table tbody tr:hover { background-color: #D3D3D3; }
 article p{
   font-family: Roboto regular, sans-serif;
   color: white;
@@ -524,7 +533,7 @@ img.logos{
     flex-direction: column;
   }
 }
-/* .footer {
+.footer {
   position: fixed;
   left: 0;
   bottom: 0;
@@ -542,7 +551,7 @@ div p.footer-txt{
   letter-spacing: 7px;
   font-size: 0.7em;
   color: #ffffff;
-} */
+}
 nav img.user-profile{
   margin-top: 0;
   height: 40px;
@@ -558,7 +567,7 @@ nav img.user-profile{
 }
 
 
-  
+/*------------messagebox----------*/   
   <!--Message Box-->
   ::-webkit-scrollbar {
     width: 15px;
@@ -595,15 +604,58 @@ nav img.user-profile{
     font-family: Roboto regular,sans-serif;
     font-size: 1rem;
   }
-
+  
   .messages-box,
   .chat-box {
-    height: 390px;
+    height: 360px;
     overflow-y: scroll;
   }
+  /*Responsiveness*/    
+@media only screen and (max-height: 590px) {
+  .chat-box{height: 335px;}
+  .messages-box{height: 335px;}
+   
+}   
+@media only screen and (min-height: 600px) {
+  .chat-box{height: 425px;}
+  .messages-box{height: 425px;} 
+         
+}
+@media only screen and (min-height: 660px) {
+  .chat-box{height: 450px;}
+  .messages-box{height: 450px;}
+            
+}
+@media only screen and (min-height: 670px) {
+  .chat-box{height: 470px;}
+  .messages-box{height: 470px;}
+            
+}
+@media only screen and (min-height: 720px) {
+  .chat-box{height: 530px;}
+  .messages-box{height: 530px;}
+   
+           }             
+@media only screen and (min-height: 800px) {
+  .chat-box{height: 595px;}
+  .messages-box{height: 595px;}
+   
+}
+@media only screen and (min-height: 820px) {
+  .chat-box{height: 620px;}
+  .messages-box{height: 620px;}
+  body{background-image: url("../img/adminBG.png");}
+}
+@media only screen and (min-width: 1000px) {
+  .chat-box{height: 360px;}
+  .messages-box{height: 360px;}
+  body{background-image: url("../img/adminBG.png");}
+}
+  
   .rounded-lg {
     border-radius: 0.5rem;
   }
+  
   input::placeholder {
     font-size: 1.0rem;
     color: #999;
@@ -612,7 +664,8 @@ nav img.user-profile{
     font-weight: bold;
     font-size: 1rem;
     margin-bottom: 0;
+
   }
 .cmessage{
-  font-size: 0.9rem;
+  font-size: 1.5rem;
 }
