vStat changes, js still needs fix

--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -553,7 +553,7 @@ h2.aHeader-txt{
   margin-top: -5px;
 }
 .Bvote_percentage{
-  background: #ececec;
+  background: #0c1d34;
   padding: 2px;
   box-sizing: border-box;
   /* border: 1px solid #0e1f26; */
