--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -451,7 +451,7 @@ nav h5{
   div.container{padding: 2rem;
     background-color:#dddddd;
     margin-top: 3%;
-    margin-bottom: 3%;
+    margin-bottom: 6%;
     border: 2px solid #124254;
     width: 80%;
     height: auto;
@@ -493,9 +493,10 @@ nav h5{
   td {
       border: 1px solid #124254;
       padding: 0px;
-      max-width: 150px;
+      max-width: 200px;
       max-height: 150px;
       overflow: hidden;
+      word-wrap: break-word;
 }
 
 article p{
