--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -8,7 +8,7 @@
 }
 body{  
   font-family: Roboto,Roboto Thin,Generica, sans-serif;  
-  background-image: url("../img/studentBG.png");
+  background-image: url("../../img/studentBG.png");
   background-size: cover;
   font-size: 100%;
   background-attachment: fixed;
@@ -63,7 +63,7 @@ nav ul{
   z-index: 4;
 }
 nav ul li{
-  float: left;
+  /* float: left; */
   display: inline-block;
   height: 80px;
   background: #f8f8f8;
@@ -1007,19 +1007,29 @@ z-index:1000;
   padding: 30px;
   color: black;
   display: grid;  
-  grid-gap: 5px;  
+  grid-gap: 30px;   
   grid-template-columns: repeat(auto-fit, minmax(200px, 5fr));
-  grid-template-rows: repeat(2, 200px);  
+  grid-template-rows: repeat(autofit,30%);  
   text-align: center;
   margin-top: -5px;
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+.Barch_container > div{
+  border-radius: 20px;
+  background-color: rgba(21, 54, 69, 0.85);
+  padding: 20px;
+}
+
 .Barch_container > div > img{
   border-radius: 50%;
   width: 80px;
 }
 .Barch_container > div > img > p {  
   width: 100%;  
-  height: 100%;  
+  height: 0;  
   object-fit: cover;  
   text-align: center;
 }
@@ -1031,12 +1041,38 @@ z-index:1000;
 }
 .Bpstn .Bname{
   margin-top: 10px;
-  color:  #142d4f;
+  /* color:  #142d4f; */
+  color:  #ffffff;
   font-weight: bold;
+  font-size: 20px;
+  text-transform: uppercase;
+  border-top-color: white;
+  border-top-style: solid;
+  border-top-width: 90%;
+  padding-top: 10px;
 }
 .Bpstn .Bpstn{
-  margin-top: 10px;
-  color:  #ffb700;
   margin-top: -10px;
+  color:  #ffb700;
   font-weight: bold;
+  font-size: 150%;
+  border-bottom-color: white;
+  border-bottom-style: solid;
+  border-bottom-width: 90%;
+  padding-bottom: 10px;
+}
+
+.Bpstn .Bplat1{
+  margin-top: 15px;
+  color:  white;
+  font-weight: bold;
+  font-size: 120%;
+  letter-spacing: 1px;
+}
+
+.Bpstn .Bplat2{
+  color:  #ffb700;
+  /* font-weight: bold; */
+  font-size: 100%;
+  margin-top: -5px;
 }
