--- a/css/student_css/style_studNav.css
+++ b/css/student_css/style_studNav.css
@@ -1,4 +1,4 @@
-/* Static Page */
+/*
 *{
     margin: 0;
     padding: 0;
@@ -7,7 +7,6 @@
     list-style: none;  
   }
   
-  /* Body */
   body{  
     font-family: Roboto,Roboto Thin,Generica, sans-serif;  
     background-image: url("../../img/studentBG.png");
@@ -16,20 +15,17 @@
     background-attachment: fixed;
     width: auto;
     min-height: 100%;
-  }
+  }*/
   
-  /* Top Navigation */
+  /* Navigation */
   nav{
     background: #f8f8f8;
     box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
                 0 3px 6px rgba(0, 0, 0, .23);
     width: 100%;
     z-index: 500;
-    position: sticky;
+    display: flex;
     top: 0;
-  }
-  nav:before{
-    min-height: 100%;
   }
   nav:after{
     content: '';
@@ -136,7 +132,6 @@
    margin: 0px;
    float: none;
    display: list-item;
-   color:white;
   }
   nav ul ul li a{
     line-height: 50px;
