--- a/css/student_css/style_studDash.css
+++ b/css/student_css/style_studDash.css
@@ -229,16 +229,18 @@ nav img.Auser-profile{
   }
   nav ul li,nav ul ul li{
     border-top: 3px solid #18566e;
+    color:white;
     display: block;
     width: 100%;
   }
   nav ul li a:hover{
     box-shadow: none;
+    color:white;
   }
 
   .Ashow{
     display: block;
-    background-color: #18566e;
+    /* background-color: #18566e; */
     color: white;
     font-size: 1.2em;
     padding: 0 20px;
@@ -250,7 +252,7 @@ nav img.Auser-profile{
   }
   .Aicon{
     display: block;
-    color:  black;
+    /* color:  black; */
     position: absolute;
     top: 0;
     right: 40px;
