--- a/css/student_css/style_studNav.css
+++ b/css/student_css/style_studNav.css
@@ -231,23 +231,25 @@
     }
     .Ashow + a, ul{
       display: none;
-      color:white;
-      
     }
     nav ul li,nav ul ul li{
       display: block;
       width: 100%;
       background-color:  #18566e;
-      color:white;
-      
+      color:white; 
+    }
+    #Ashow1{
+      color: white;
+    }
+    #Ashow1:hover{
+      color: black;
     }
     nav ul li a:hover{
       box-shadow: none;
       text-decoration: none;
-      color:white;
+      color:black;
     }
     .Ashow{
-      background-color: #18566e;
       display: block;
       color: white;
       font-size: 1.2em;
