--- a/css/admin_css/style_adminNav.css
+++ b/css/admin_css/style_adminNav.css
@@ -188,12 +188,12 @@
     top: -60px;
     left: 150px;
   }
-  .Ashow, .ADicon{
+  .Ashow, .Ashow2, .ADicon{
     display: none
   }
   
   .nav-toggle1, .nav-toggle2, .nav-toggle3,
-  .nav-toggle4, .nav-toggle5, .nav-toggle6{
+  .nav-toggle4, .nav-toggle5, .nav-toggle6, .nav-toggle7{
     display: none;
   }
   /* .fa-plus{
@@ -215,7 +215,10 @@
     .Ashow + a, ul{
       display: none;
     }
-    nav ul li,nav ul ul li{
+    .Ashow2 + a, ul{
+      display: none;
+    }
+    nav ul li,nav ul ul li, nav ul ul ul li{
       display: block;
       width: 100%;
     }
@@ -224,14 +227,24 @@
     }
     .Ashow{
       display: block;
-      color: #ffffff;
+      color: #fafafa !important;
       font-size: 1.2em;
       padding: 0 20px;
       line-height: 70px;
       cursor: pointer;
+      margin-bottom: 0;
+    }
+    .Ashow2{
+      display: block;
+      color: #000000 !important;
+      font-size: 1.2em;
+      padding: 0;
+      line-height: 50px;
+      cursor: pointer;
+      margin-bottom: 0;
     }
     .Ashow:hover{
-      color:white;
+      color:rgb(0, 0, 0);
     }
     .ADicon{
       display: block;
@@ -256,12 +269,23 @@
     nav ul ul a{
       left: 0;
     }
-    /* nav ul ul ul a{
-      padding-left: 80px;
+    nav ul ul ul{
+      top: 70px;
+      border-top: 0px !important;
+      border-bottom: 0px;
+      float: none;
+      position: static;
+      display: none;
+      opacity: 1;
+      visibility: visible;
+    }
+    nav ul ul ul a{
+      left: 0px;
     }
     nav ul ul ul li{
+      margin-top: 0;
       position: static;
-    } */
+    }
     [id^=btn]:checked + ul{
       width: 100%;
       left: 0;
@@ -275,127 +299,7 @@
       content: '\f00d';
     } 
   }
-
-  /* p{
-    font-size: 30px;
-    font-weight: 500;
-    font-family: Generica regular, sans-serif;
-  } */
-
-  /* Container for flexboxes */
-  /* section {
-    display: -webkit-flex;
-    display: flex;
-    margin-left: 30px;
-    margin-top: 100px;
-    float: left;
-  }
-  article p{
-    font-family: Roboto regular, sans-serif;
-    color: white;
-    font-weight: inherit;
-    font-size: 20px;
-    letter-spacing: 3px;
-    position: relative;
-  }
-  article h1{
-    font-family: Generica regular, sans-serif;
-    color: #ffc423;
-    font-weight: inherit;
-    font-size: 55px;
-    position: relative;
-    letter-spacing: 3px;
-    margin-top: 10px;
-  }
-  /* Style the content */
-  /* article {
-    -webkit-flex: 3;
-    -ms-flex: 3;
-    flex: 3;
-    padding: 10px;
-  }  */
-  /*For logos on top of welcome banner*/
-  /* img.logos{
-    float: left;
-    padding-left: 10px;
-    height: 90px;
-    width: 100px;
-    margin-bottom: 2em;
-  }
-  .logo-container{
-    position:relative;
-    display: -webkit-flex;
-    display: flex;
-    margin-left: 0px;
-    margin-top: 0px;
-    max-width: 700px;
-  }  */
-  /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-  /* @media (max-width: 600px) {
-    body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
-      -webkit-flex-direction: column;
-      flex-direction: column;
-    }
-    .ADcountdown{
-      font-size: auto;
-    }
-    #AD-CD-contents{
-      display: block;
-      font-size: auto;
-    }
-  } */
-  /*countdown*/
-  /* aside{
-    color: #333;
-    float: left;
-    text-align: center;
-    margin-right: 30px;
-    margin-left: 30px;
-    top: 80px;
-    padding-bottom: 50px;
-    position: relative;
-    max-width: 500px;
-    float: right;
-  }
-  #AD-CD-headline {
-    font-weight: normal;
-    letter-spacing: .125rem;
-    text-transform: uppercase;
-    font-size: 2.5em;
-    color: black;
-    margin-bottom: .8em;
-  }
-  #AD-CD-contents{ 
-    border: 1px solid #ffc423;
-    border-width: 3px;
-    text-align: center;
-    padding: 0;
-  }
-  div li {
-    display: inline-block;
-    font-size: 1em;
-    list-style-type: none;
-    padding: 5%;
-    text-transform: uppercase;
-    color: rgb(255, 255, 255);
-  }
-  div li span {
-    display: block;
-    font-size: 2.5rem;
-  
-  }
-  aside p.Aelec-guide-txt{
-    font-family: Roboto Regular, sans-serif;
-    text-align: justify;
-    font-size: 1em;
-    margin-top: 1em;
-    margin-bottom: 0;
-  }
-  #ADaside-container{
-    min-height: 100%;
-    padding-bottom: 50px;
-  } */
-  
+    
   /*footer*/
   .footer {
     position: fixed;
