--- a/css/admin_css/style_adminNav.css
+++ b/css/admin_css/style_adminNav.css
@@ -65,6 +65,10 @@
     margin-top: 14px;
     margin-left: 40px;
   }
+  .username{
+    cursor: not-allowed;
+    text-decoration: none !important;
+  }
   nav ul{
     float: right;
     padding: 0;
@@ -85,7 +89,7 @@
     width: 150px;
   }
   nav ul li a{
-    color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255) !important;
     line-height: 70px;
     text-decoration: none;
     font-size: 1.2em;
@@ -95,7 +99,7 @@
   }
   nav ul li a:visited {
     color: #ffffff;
-    text-decoration: none;
+    text-decoration: none !important;
   }
   nav ul li a:hover{
     color: #ffc423;
@@ -117,6 +121,7 @@
     opacity: 0;
     visibility: hidden;
     transition: top .3s;
+    color: #000000 !important;
   }
   nav ul ul li{ /*dropdown list*/
    height: 50px;
@@ -124,9 +129,11 @@
    margin: 0px;
    float: none;
    display: list-item;
+   color: black !important;
   }
   nav ul ul li a{
     line-height: 50px;
+    color: black !important;
   }
   nav ul ul li .logout::before {
     content: "\f2f5";
@@ -134,7 +141,7 @@
     padding: 0 10px 0 0;
   }
   nav ul ul li a:link{
-    color:rgb(0, 0, 0);
+    color:rgb(0, 0, 0) !important;
   }
   nav ul ul li a:visited {
     color: black;
@@ -188,12 +195,15 @@
     top: -60px;
     left: 150px;
   }
-  .Ashow, .Ashow2, .ADicon{
-    display: none
+  .Ashow, .Ashow2, .Ashow3, .ADicon{
+    display: none;
   }
   
   .nav-toggle1, .nav-toggle2, .nav-toggle3,
-  .nav-toggle4, .nav-toggle5, .nav-toggle6, .nav-toggle7{
+  .nav-toggle4, .nav-toggle5, .nav-toggle6{
+    display: none;
+  }
+  .nav-toggle7, .nav-toggle8{
     display: none;
   }
   /* .fa-plus{
@@ -218,6 +228,9 @@
     .Ashow2 + a, ul{
       display: none;
     }
+    /* .Ashow3 + a, ul{
+      display: none;
+    } */
     nav ul li,nav ul ul li, nav ul ul ul li{
       display: block;
       width: 100%;
@@ -242,6 +255,16 @@
       line-height: 50px;
       cursor: pointer;
       margin-bottom: 0;
+    }
+    .Ashow3{
+      display: block;
+      color: #000000 !important;
+      font-size: 1.2em;
+      padding: 0;
+      line-height: 50px;
+      cursor: pointer;
+      margin-bottom: 0;
+      top: 0;
     }
     .Ashow:hover{
       color:rgb(0, 0, 0);
@@ -277,7 +300,7 @@
       position: static;
       display: none;
       opacity: 1;
-      visibility: visible;
+      visibility: visible !important;
     }
     nav ul ul ul a{
       left: 0px;
@@ -327,70 +350,3 @@
     width: 40px;
   }
    */
-  /*Datatable*/
-  /* div.container {
-    background-color:#dddddd;
-    padding: 1rem;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    border: 2px solid #124254;
-    width: 100% !important;
-    height: auto;
-    opacity: 80%;
-    font-size: .8rem;
-  }
-  #ADdataTable {
-    border-collapse: collapse !important;
-    table-layout: auto;
-    margin: 0px;
-    text-align: center;
-    opacity: 100%;
-    width: 100% !important;
-  }
-  thead {
-    width: 100%;
-    color: #EEEEEE;
-    background-color: #18566e;
-    text-align: center;
-    opacity: 100%;
-  }
-  thead input {
-    width: 100%;
-  }
-  th {
-    color: #ffffff;
-    background-color: #18566e;
-    text-align: center;
-    font-size: .8rem;
-    font-family: Roboto regular, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px; 
-    border: 1px solid #124254 !important;
-  }
-  td {
-      border: 1px solid #124254;
-      padding: 0px;
-      max-width: 150px;
-      max-height: 150px;
-      overflow: hidden;
-      font-size: .8rem;
-  }
-  #ADheader{
-    position: relative;
-    z-index: -1;
-    padding: 6px;
-    background: #124254;
-    color: #ffffff;
-    width: 100%;
-    text-align: center;
-    font-family: Roboto Regular, sans-serif;
-    letter-spacing: 6px;
-  }
-  h2.aHeader-txt{
-    font-size: 24px;
-    margin-top: .5%;
-    margin-bottom: .5%;
-  }
-  .row{
-    margin: 0;
-  } */
