--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -259,32 +259,6 @@ nav ul ul ul li{
   }
   
 }
-/*ballesteros*/
-nav h4{
-  font-family: Roboto Regular, sans-serif;
-  font-weight: inherit;
-  font-size: 100%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  color: #ffffff;
-  padding-top: 15px;
-  font-size:15px;
-}
-nav h5{
-  font-size: 20px;
-  margin-top: 0px;
-  color: #ffffff;
-  padding-top: 5px;
-  font-weight: inherit;
-  font-size: 100%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  font-family: Generica regular, sans-serif;
-} */
-.cnavie ul li a{
-  font-size: 1.05em;
-
-}
   .cheader {
     z-index: 100;
     padding: 1px 1px;
@@ -297,7 +271,7 @@ nav h5{
     letter-spacing: 6px;
   }
   
-  
+
   .pagination>li {
     display: inline;
     padding:0px ;
@@ -340,134 +314,153 @@ nav h5{
     }
     
     .btn-primary {
-    color: #fff ;
-    margin: 0px;
-    padding: 0px;
-    background: #5cb85c!important;
-    border-color: #5cb85c!important;
-    box-shadow:none ;
-    }
-    .btn-danger {
-    color: #fff ;
-    margin: 0px;
-    padding: 0px;
-    background: #d9534f!important;
-    border-color: #d9534f!important;
-    box-shadow:none ;
-    }
-    .btn-button1{
-    color: #eeeeee ;
-    padding: 0px;
-    background: #124254 ;
-    border-color: #124254;
-    box-shadow:none ; 
-    padding: 10px 20px;
-    margin: 25px 5px 15px 0px!important;      
-    }
-    .btn-button2{
-      color: #eeeeee ;
+      color: #fff ;
       margin: 0px;
       padding: 0px;
+      background: #5cb85c!important;
+      border-color: #5cb85c!important;
+      box-shadow:none ;
+      }
+      .btn-primary:hover{background-color: #4a934a!important;}
+      .btn-danger {
+      color: #fff ;
+      margin: 0px;
+      padding: 0px;
+      background: #d9534f!important;
+      border-color: #d9534f!important;
+      box-shadow:none ;
+      }
+      .btn-danger:hover{background-color: #d93e39!important;}
+      .btn-button1{
+      color: #eeeeee ;
       background: #124254 ;
       border-color: #124254;
       box-shadow:none ; 
       padding: 10px 20px;
-      margin: 25px 0px 15px 0px!important;      
-      }    
-   #save{
+      margin: 25px 5px 15px 0px!important;      
+      }
+      .btn-button1:hover{background-color:#18566e !important; color: #EEEEEE!important;}
+      .btn-button2{
+        color: #eeeeee ;
+        background: #124254 ;
+        border-color: #124254;
+        box-shadow:none ; 
+        padding: 10px 20px;
+        margin: 25px 5px 15px 0px!important;      
+        }
+       .btn-button2:hover{background-color:#18566e !important; color: #EEEEEE!important;}
+       .btn-button3{
+        color: #eeeeee ;
+        background: #124254 ;
+        border-color: #124254;
+        box-shadow:none ; 
+        padding: 10px 20px;
+        margin: 25px 5px 15px 0px!important;      
+        }
+        .btn-button3:hover{background-color:#18566e !important; color: #EEEEEE!important;}
+        @media only screen and (max-width: 600px) {
+          .btn-button1{
+            margin: 25px 2px 5px 0px!important;    
+            }
+          .btn-button2{
+            margin: 0px 500px 5px 0px!important;      
+              }
+          .btn-button3{
+            margin: 0px 0px 15px 0px!important;}
+          .btn-button4{
+              width: 25% !important;
+              margin: 30px 15px 10px 0px!important; 
+              }    
+      }
+      .btn-button4{
+          background: #dddddd ;
+          box-shadow:none ;
+          width: 15%;        
+          margin-top: 10px ;      
+          }
+      .btn-button4:hover{background-color: 	#c1c1c1!important;}
+      .btn-button5{
+        color: #eeeeee ;
+        background: #124254 ;
+        border-color: #124254;
+        box-shadow:none ; 
+        padding: 10px 20px;
+        margin: 25px 5px 15px 0px!important;      
+        }
+        .btn-button5:hover{background-color:#18566e !important; color: #EEEEEE!important;} 
+        /*BUTTON FOR SIGNATORY*/
+        .btn-button3{
+        color: #eeeeee ;
+        margin-bottom: 4px !important;
+        padding: 0px;
+        background: #124254 ;
+        border-color: #124254;
+        box-shadow:none ; 
+        padding: 10px 20px;
+        margin: 0px 15px 15px 25px ; 
+        }   
+        .btn-button3:hover{background-color:#18566e !important; color: #EEEEEE!important;} 
+      .container1{
+      max-width: 100%;
+      height: 150%;
+      }
+  
+      .field-icon{
+        float: right;
+        margin-left: -25px;
+        margin-top: -25px;
+        position: relative;
+        z-index: 2;
+      }
+  
+  
+     #save{
+        color:#fff;
+        background: #124254;
+        margin-bottom: 5px; 
+     }
+     .save:hover{background-color:#18566e !important; color: #EEEEEE!important;} 
+  
+     #cancel{
+        background-color:#dddddd;
+        margin:auto;
+     }
+     .cancel:hover{background-color:#18566e !important; color: #EEEEEE!important;} 
+     #continue{
+        background-color: #d9534f;
+        color:#fff;
+     }
+     .continue:hover{background-color:#18566e !important; color: #EEEEEE!important;} 
+     #cancel2{
+        background-color: #dddddd;
+     }
+     .cancel2:hover{background-color:#18566e !important; color: #EEEEEE!important;} 
+     #go{
       color:#fff;
       background: #124254;
-      margin-bottom: 5px; 
-   }
-
-   #cancel{
-      background-color:#dddddd;
-      margin:auto;
-
-   }
-   #continue{
-      background-color: #d9534f;
-      color:#fff;
-   }
-   #cancel2{
-      background-color: #dddddd;
-   }
-   #go{
-    color:#fff;
-    background: #124254;
-   }
-
-
-  /*BUTTON FOR SIGNATORY*/
-  .btn-button3{
-    color: #eeeeee ;
-    margin-bottom: 4px !important;
-    padding: 0px;
-    background: #124254 ;
-    border-color: #124254;
-    box-shadow:none ; 
-    padding: 10px 20px;
-    margin: 0px 15px 15px 25px ; 
-
-    
-  }    
-
-  .container1{
-  max-width: 100%;
-  height: 150%;
-  }
-
-.field-icon{
-      float: right;
-      margin-left: -25px;
-      margin-top: -25px;
-      position: relative;
-      z-index: 2;
-    }
-
-  #save{
-    color:#fff;
-    background: #124254;
-    margin-bottom: 5px; 
- }
-
- #cancel{
-    background-color:#dddddd;
-    margin:auto;
-
- }
- #continue{
-    background-color: #d9534f;
-    color:#fff;
- }
- #cancel2{
-    background-color: #dddddd;
- }
- #go{
-  color:#fff;
-  background: #124254;
- }
+     }
+     .go:hover{background-color:#18566e !important; color: #EEEEEE!important;} 
+  
 
   div.container{padding: 2rem;
-    background-color:#dddddd;
+    background:rgba(255,255,255, 0.7);
     margin-top: 3%;
-    margin-bottom: 6%;
-    border: 2px solid #124254;
+    margin-bottom: 3%;
+    /*border: 2px solid #124254;*/
     width: 80%;
     height: auto;
-    opacity: 80%;
-    font-size: 1.5rem;
   } 
 
  #datatable {
 
-    width: 100%;
-    border: 1px solid #124254;
-    font-family: Roboto regular, sans-serif;
-    border-collapse: collapse;
-    table-layout: auto;
-    margin:0px;
-    text-align: center;
+  width: 100%;
+  border: 1px solid #124254;
+  font-family: Roboto regular, sans-serif;
+  border-collapse: collapse;
+  table-layout: auto;
+  margin:0px;
+  text-align: center;
+  background:rgba(255,255,255, 0.6);
   }
   
   table.center {
@@ -493,7 +486,7 @@ nav h5{
   td {
       border: 1px solid #124254;
       padding: 0px;
-      max-width: 200px;
+      max-width: 150px;
       max-height: 150px;
       overflow: hidden;
       word-wrap: break-word;
