fix dashboard content

--- a/css/student_css/style_studNav.css
+++ b/css/student_css/style_studNav.css
@@ -16,6 +16,7 @@
     background-attachment: fixed;
     width: auto;
     min-height: 100%;
+    margin-bottom: 50px;
   }
   
   /* Top Navigation */
