--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -123,7 +123,7 @@ nav ul ul li{ /*dropdown list*/
  float: none;
  display: list-item;
 }
-nav ul ul li a{
+/* nav ul ul li a{
   line-height: 50px;
 }
 nav ul ul li .logout::before {
@@ -185,7 +185,7 @@ nav ul ul ul li{
   font-size: 1em;
   top: -60px;
   left: 150px;
-}
+} */
 .Ashow, .ADicon{
   display: none
 }
@@ -346,7 +346,7 @@ aside{
   color: #333;
   float: left;
   text-align: center;
-  margin-right: 30px;
+  margin-right: 60px;
   margin-left: 30px;
   top: 80px;
   padding-bottom: 50px;
