Voting Page cummulative update
Updated error messages
Disables error message on nav bar
Experimental error message modal zindex

--- a/css/student_css/modal_error_messages.css
+++ b/css/student_css/modal_error_messages.css
@@ -19,6 +19,7 @@ body {
 
 /* Modal Content */
 .F-modal-content-error {
+  z-index : 1000;
   border: 1px solid black;
   width: 35%;
   margin: auto;    
