--- a/css/admin_css/admin_Pos.css
+++ b/css/admin_css/admin_Pos.css
@@ -329,7 +329,7 @@
   } 
   /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
   @media (max-width: 600px) {
-    body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    body, section, #ADaside-container, #ADcountdown, #AD-CD-contents, .wrapper {
       -webkit-flex-direction: column;
       flex-direction: column;
     }
@@ -341,6 +341,9 @@
       font-size: auto;
     }
   }
+
+
+}
   /*countdown*/
   aside{
     color: #333;
@@ -426,11 +429,11 @@
     background-color:#dddddd;
     padding: 1rem;
     margin-top: 3%;
-    margin-bottom: 3%;
+    margin-bottom: 8%;
     border: 2px solid #124254;
-    width: 100% !important;
+    width: 95%;
     height: auto;
-    opacity: 80%;
+    /* opacity: 80%; */
     font-size: .8rem;
   }
   #ADdataTable {
@@ -1109,7 +1112,7 @@
   
   .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate
   {
-    color:white !important;
+    color: white;
   }
   
   .dataTables_wrapper .dataTables_length select
@@ -1127,7 +1130,7 @@
   .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active
   {
       cursor: default;
-      color: white!important;
+      color: white;
       border: 1px solid transparent;
       background: transparent;
       box-shadow: none;
@@ -1223,3 +1226,19 @@ a.paginate_button:hover {
   background-color: #15254 !important;
   color: white;
 }
+
+.dataTables_wrapper .dataTables_length select{
+  background-color:white !important;
+  color: #333 !important;
+}
+
+.dataTables_wrapper .dataTables_filter input{
+  background-color:white !important;
+}
+
+.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper{
+  color: #333 important;
+}
+
+::-webkit-scrollbar {
+  display: none;
