--- a/css/admin_css/admin_Pos.css
+++ b/css/admin_css/admin_Pos.css
@@ -1250,6 +1250,7 @@ a.paginate_button:hover {
 
 .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper{
   color: #333 important;
+  font-size:15px;
 }
 
 ::-webkit-scrollbar {
