--- a/css/student_css/modal_error_messages.css
+++ b/css/student_css/modal_error_messages.css
@@ -3,33 +3,44 @@ body {
 }
 
 /* The Modal (background) */
+
 .F-modal-error {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
 
 /* Modal Content */
+
 .F-modal-content-error {
-  z-index : 1000;
+  z-index: 1000;
   border: 1px solid black;
   width: 35%;
-  margin: auto;    
+  margin: auto;
   background-color: #f8f8f8;
   margin-top: 13%;
   position: relative;
   padding: 0;
   height: auto;
   overflow: auto;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
@@ -37,22 +48,33 @@ body {
 }
 
 /* Add Animation */
+
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0
+  }
+  to {
+    top: 0;
+    opacity: 1
+  }
 }
 
 @keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0
+  }
+  to {
+    top: 0;
+    opacity: 1
+  }
 }
-
-
 
 .F-modal-header-error {
   padding: 2px 16px;
-  background-color: #f8f8f8;;
- 
+  background-color: #f8f8f8;
+  ;
 }
 
 .F-modal-body-error {
@@ -64,8 +86,8 @@ body {
 
 .F-modal-footer-error {
   padding: 2px 16px;
-  background-color: #f8f8f8;;
- 
+  background-color: #f8f8f8;
+  ;
 }
 
 .F-modal-footer-error button {
@@ -80,6 +102,7 @@ body {
 }
 
 /* OK Button */
+
 .F-OkBTN-error {
   float: right;
   background-color: #fece4b;
@@ -93,9 +116,8 @@ body {
   cursor: pointer;
 }
 
-@media (max-width: 1200px){
+@media (max-width: 1200px) {
   .F-modal-content-error {
     width: 70%;
   }
-  
 }
