--- a/css/student_css/style_msgbox.css
+++ b/css/student_css/style_msgbox.css
@@ -1,12 +1,13 @@
-*{
+* {
   margin: 0;
   padding: 0;
   user-select: none;
   box-sizing: border-box;
-  list-style: none;  
+  list-style: none;
 }
-body{  
-  font-family: Roboto,Roboto Thin,Generica, sans-serif;  
+
+body {
+  font-family: Roboto, Roboto Thin, Generica, sans-serif;
   background-image: url("../img/studentBG.png");
   background-size: cover;
   font-size: 100%;
@@ -14,19 +15,21 @@ body{
   width: auto;
   height: 100%;
 }
-nav{
+
+nav {
   background: #f8f8f8;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
-              0 3px 6px rgba(0, 0, 0, .23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .15), 0 3px 6px rgba(0, 0, 0, .23);
   width: auto;
   z-index: 3;
 }
-nav:after{
+
+nav:after {
   content: '';
   clear: both;
   display: table;
 }
-nav h2{
+
+nav h2 {
   font-family: Roboto Regular, sans-serif;
   font-weight: inherit;
   font-size: 140%;
@@ -34,7 +37,8 @@ nav h2{
   letter-spacing: 6px;
   color: #124254;
 }
-nav h3{
+
+nav h3 {
   margin-top: 0px;
   color: #124254;
   padding-top: 5px;
@@ -44,14 +48,16 @@ nav h3{
   letter-spacing: 6px;
   font-family: Generica regular, sans-serif;
 }
-nav .Alogo{
+
+nav .Alogo {
   float: left;
   position: relative;
   line-height: 80px;
   margin-top: 5px;
   margin-left: 40px;
 }
-nav ul{
+
+nav ul {
   float: right;
   padding: 0;
   height: 80px;
@@ -62,7 +68,8 @@ nav ul{
   text-align: center;
   z-index: 4;
 }
-nav ul li{
+
+nav ul li {
   float: left;
   display: inline-block;
   height: 80px;
@@ -71,7 +78,8 @@ nav ul li{
   /* margin: 0 5px; */
   width: 150px;
 }
-nav ul li a{
+
+nav ul li a {
   color: black;
   line-height: 70px;
   text-decoration: none;
@@ -80,24 +88,30 @@ nav ul li a{
   letter-spacing: 1px;
   font-family: Roboto Light, sans-serif;
 }
+
 nav ul li a:visited {
   color: black;
   text-decoration: none;
 }
-nav ul li a:hover{
+
+nav ul li a:hover {
   color: black;
   text-decoration: none;
 }
-nav ul li a:active{
+
+nav ul li a:active {
   text-decoration: none;
 }
-nav ul li:hover{
+
+nav ul li:hover {
   background-color: #fece4b;
 }
+
 nav ul li a:active {
   color: green;
 }
-nav ul ul{
+
+nav ul ul {
   position: absolute;
   top: 90px;
   border-top: 3px solid #18566e;
@@ -105,59 +119,72 @@ nav ul ul{
   visibility: hidden;
   transition: top .3s;
 }
-nav ul ul li{
- height: 50px;
- position: relative;
- margin: 0px;
- float: none;
- display: list-item;
+
+nav ul ul li {
+  height: 50px;
+  position: relative;
+  margin: 0px;
+  float: none;
+  display: list-item;
 }
-nav ul ul li a{
+
+nav ul ul li a {
   line-height: 50px;
 }
-nav ul ul li a.Aelec-text{
+
+nav ul ul li a.Aelec-text {
   font-size: 1.2em;
 }
+
 nav ul ul li .logout::before {
   content: "\f2f5";
   font-family: "Font Awesome 5 Free";
   padding: 0 10px 0 0;
 }
-nav ul ul li a:link{
-  color:rgb(0, 0, 0);
+
+nav ul ul li a:link {
+  color: rgb(0, 0, 0);
 }
+
 nav ul ul li a:visited {
   color: white;
   text-decoration: none;
 }
-nav ul ul li a:hover{
+
+nav ul ul li a:hover {
   color: white;
   box-shadow: none;
   text-decoration: none;
 }
-nav ul ul li:hover{
+
+nav ul ul li:hover {
   background-color: #124254;
   text-decoration: none;
 }
-nav ul ul li a:active{
+
+nav ul ul li a:active {
   color: #1b1b1b;
   box-shadow: none;
   text-decoration: none;
 }
-nav ul ul ul{
+
+nav ul ul ul {
   border-top: none;
 }
-nav ul ul ul li{
+
+nav ul ul ul li {
   position: relative;
   top: -60px;
   left: 150px;
 }
-nav ul li:hover > ul{
+
+nav ul li:hover>ul {
   top: 70px;
   opacity: 1;
   visibility: visible;
 }
-nav ul ul li{
+
+nav ul ul li {
   background: #18566e;
   position: relative;
   margin: 0px;
@@ -165,35 +192,40 @@ nav ul ul li{
   font-size: 0.8em;
   float: none;
   display: list-item;
-  border-bottom: 1px solid rgba(0,0,0,0.3);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   z-index: 1;
 }
-nav ul ul li a{
+
+nav ul ul li a {
   color: black;
   line-height: 50px;
   font-family: Roboto bold, sans-serif;
 }
-nav ul ul ul li{
+
+nav ul ul ul li {
   position: relative;
   font-size: 1em;
   top: -60px;
   left: 150px;
 }
-.Ashow,.Aicon,input{
+
+.Ashow, .Aicon, input {
   display: none;
 }
-nav img.Auser-profile{
+
+nav img.Auser-profile {
   margin-top: 0;
   height: 40px;
   width: 40px;
 }
+
 /* .fa-plus{
   font-size: 15px;
   margin-left: 40px;
 } */
 
 @media all and (max-width: 968px) {
-  nav ul{
+  nav ul {
     margin-right: 0px;
     margin-left: 0px;
     float: left;
@@ -203,18 +235,18 @@ nav img.Auser-profile{
     width: auto;
     float: left;
   } */
-  .Ashow + a, ul{
+  .Ashow+a, ul {
     display: none;
   }
-  nav ul li,nav ul ul li{
+  nav ul li, nav ul ul li {
     border-top: 3px solid #18566e;
     display: block;
     width: 100%;
   }
-  nav ul li a:hover{
+  nav ul li a:hover {
     box-shadow: none;
   }
-  .Ashow{
+  .Ashow {
     display: block;
     background-color: #18566e;
     color: white;
@@ -223,12 +255,12 @@ nav img.Auser-profile{
     line-height: 70px;
     cursor: pointer;
   }
-  .Ashow:hover{
-    color:white;
+  .Ashow:hover {
+    color: white;
   }
-  .Aicon{
+  .Aicon {
     display: block;
-    color:  black;
+    color: black;
     position: absolute;
     top: 0;
     right: 40px;
@@ -236,7 +268,7 @@ nav img.Auser-profile{
     cursor: pointer;
     font-size: 25px;
   }
-  nav ul ul{
+  nav ul ul {
     top: 70px;
     border-top: 0px;
     border-bottom: 0px;
@@ -246,7 +278,7 @@ nav img.Auser-profile{
     opacity: 1;
     visibility: visible;
   }
-  nav ul ul a{
+  nav ul ul a {
     left: 0;
   }
   /* nav ul ul ul a{
@@ -255,31 +287,33 @@ nav img.Auser-profile{
   nav ul ul ul li{
     position: static;
   } */
-  [id^=btn]:checked + ul{
+  [id^=btn]:checked+ul {
     width: 100%;
     left: 0;
     display: block;
   }
-  nav ul ul li{
+  nav ul ul li {
     border-top: 0px;
     border-bottom: 0px;
   }
-  span.cancel:before{
+  span.cancel:before {
     content: '\f00d';
   }
-  
 }
-header{
+
+header {
   font-size: 35px;
   font-weight: 600;
   padding: 10px 0;
 }
-p{
+
+p {
   font-size: 30px;
   font-weight: 500;
   font-family: Generica regular, sans-serif;
 }
-article p{
+
+article p {
   font-family: Roboto regular, sans-serif;
   color: #124254;
   font-weight: inherit;
@@ -287,7 +321,8 @@ article p{
   letter-spacing: 3px;
   position: relative;
 }
-article h1{
+
+article h1 {
   font-family: Generica regular, sans-serif;
   color: #18566e;
   font-weight: inherit;
@@ -296,7 +331,9 @@ article h1{
   letter-spacing: 3px;
   margin-top: 10px;
 }
+
 /* Container for flexboxes */
+
 section {
   display: -webkit-flex;
   display: flex;
@@ -305,31 +342,38 @@ section {
   max-width: 800px;
   float: left;
 }
+
 /* Style the content */
+
 article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
   padding: 10px;
 }
+
 /*For logos on top of welcome banner*/
-img.Alogos{
+
+img.Alogos {
   float: left;
   padding-left: 10px;
   height: 90px;
   width: 100px;
   margin-bottom: 2em;
 }
-.Alogo-container{
-  position:relative;
+
+.Alogo-container {
+  position: relative;
   /* float: left; */
   display: -webkit-flex;
   display: flex;
   margin-left: 0px;
   margin-top: 0px;
   max-width: 700px;
-} 
+}
+
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+
 @media (max-width: 600px) {
   body, section, .Acontainer {
     -webkit-flex-direction: column;
@@ -337,12 +381,9 @@ img.Alogos{
   }
 }
 
-
-
-
-
 /*countdown*/
-aside{
+
+aside {
   color: #333;
   float: left;
   text-align: center;
@@ -351,8 +392,8 @@ aside{
   bottom: 0;
   position: relative;
   max-width: 500px;
-
 }
+
 div h1 {
   font-weight: normal;
   letter-spacing: .125rem;
@@ -361,13 +402,15 @@ div h1 {
   color: black;
   margin-bottom: .8em;
 }
-div ul{
+
+div ul {
   /* max-width: 90%; */
   border: 1px solid #ffc423;
   border-width: 3px;
   text-align: center;
   padding: 0;
 }
+
 div li {
   display: inline-block;
   font-size: 1.5em;
@@ -376,30 +419,30 @@ div li {
   text-transform: uppercase;
   color: black;
 }
+
 div li span {
   display: block;
   font-size: 4.5rem;
-
 }
-aside p.Aelec-guide-txt{
+
+aside p.Aelec-guide-txt {
   font-family: Roboto Regular, sans-serif;
   text-align: justify;
   font-size: 1.6em;
   margin-top: 3em;
 }
 
-
-#aside-container{
-  min-height: 100%;
-  overflow: auto;
-  padding-bottom: 5%;
-}
-#section-container{
+#aside-container {
   min-height: 100%;
   overflow: auto;
   padding-bottom: 5%;
 }
 
+#section-container {
+  min-height: 100%;
+  overflow: auto;
+  padding-bottom: 5%;
+}
 
 .footer {
   position: fixed;
@@ -410,9 +453,10 @@ aside p.Aelec-guide-txt{
   padding: .5px;
   background-color: #fece4b;
   text-align: center;
-  z-index:999999;
+  z-index: 999999;
 }
-div p.footer-txt{
+
+div p.footer-txt {
   position: relative;
   top: .5em;
   font-family: Roboto Regular, sans-serif;
@@ -421,10 +465,9 @@ div p.footer-txt{
   color: #ffffff;
 }
 
-
-
 /*Student Message Box*/
-.cheader{
+
+.cheader {
   z-index: 100;
   padding: 2px 2px;
   background: #fece4b;
@@ -435,186 +478,250 @@ div p.footer-txt{
   font-family: Roboto Regular, sans-serif;
   letter-spacing: 6px;
 }
-.ccontainer{
-  background-color:#dddddd;
+
+.ccontainer {
+  background-color: #dddddd;
   margin: 30px 100px 25px 100px;
   border: 2px solid #fece4b;
 }
+
 /* Extra small devices (phones, 600px and down) */
+
 @media only screen and (max-width: 600px) {
-  .ccontainer {margin: 0px 0px 0px 0px;;}                     
+  .ccontainer {
+    margin: 0px 0px 0px 0px;
+    ;
   }
+}
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
+
 @media only screen and (max-width: 768px) {
-  .ccontainer {margin: 0px 0px 0px 0px;}
+  .ccontainer {
+    margin: 0px 0px 0px 0px;
+  }
 }
+
 .modal-backdrop {
   z-index: -1!important;
 }
 
-iframe
-{
-    height:700px ;
+iframe {
+  height: 700px;
 }
 
 .btn {
-font-family: Roboto Regular, sans-serif;
-display: inline-block;
-padding: 6px 12px ;
-margin: 0px;
-font-size: 14px;
-font-weight: 400;
-line-height: 1.42857143;
-text-align: center;
-white-space: nowrap;
-vertical-align: middle;
--ms-touch-action: manipulation;
-touch-action: manipulation;
-cursor: pointer;
--webkit-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
-user-select: none;
-background-image: none;
-border: 1px solid transparent;
+  font-family: Roboto Regular, sans-serif;
+  display: inline-block;
+  padding: 6px 12px;
+  margin: 0px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
 }
 
-.cbtn-button2{
+.cbtn-button2 {
   color: #E1AD01;
   margin: 0px;
   padding: 0px;
-  background: #fff ;
+  background: #fff;
   border-color: #fece4b;
-  box-shadow:none ; 
+  box-shadow: none;
   padding: 5px 10px;
-  margin: 10px 30px 0px 0px!important; 
-  float: right;     
-  }    
-#cancel{
+  margin: 10px 30px 0px 0px!important;
+  float: right;
+}
+
+#cancel {
   background-color: #dddddd;
 }
-#go{
-	color: #3b444b;
-  background:  #fff192;
+
+#go {
+  color: #3b444b;
+  background: #fff192;
 }
+
 .inbox_msg {
-	clear: both;
-	overflow: hidden;
-		}
-  .top_spac{ margin: 20px 0 0;}
-  .inbox_chat { height: 550px; overflow-y: scroll;}
-  .active_chat{ background:#ebebeb;}
+  clear: both;
+  overflow: hidden;
+}
 
-  .incoming_msg_img {
-	display: inline-block;
-	width: 6%;
-  }
-	.received_msg {
-	display: inline-block;
-	padding: 0 0 0 10px;
-	vertical-align: top;
-	width: 100%;
-	}
-	.received_withd_msg p {
-	background: #fff192 none repeat scroll 0 0;
-	border-radius: 3px;
-	color: #3b444b;
-  font-family: Roboto regular,sans-serif;
-	font-size: 14px;
-	margin: 0;
-	padding: 5px 10px 5px 12px;
-	width: 100%;
-	}
-	.time_date {
-	color: #3b444b;
-	display: block;
-	font-size: 10px;
-	margin: 3px 0 0;
-  font-family: Roboto regular,sans-serif;
-		}
-	.received_withd_msg { width: 70%;}
-	.mesgs {
-	float: left;
-	padding: 30px;
+.top_spac {
+  margin: 20px 0 0;
+}
+
+.inbox_chat {
+  height: 550px;
+  overflow-y: scroll;
+}
+
+.active_chat {
+  background: #ebebeb;
+}
+
+.incoming_msg_img {
+  display: inline-block;
+  width: 6%;
+}
+
+.received_msg {
+  display: inline-block;
+  padding: 0 0 0 10px;
+  vertical-align: top;
   width: 100%;
-	}
+}
 
-	.sent_msg p {
-	background: #fece4b none repeat scroll 0 0;
-  font-family: Roboto regular,sans-serif;
-	border-radius: 3px;
-	font-size: 14px;
-	margin: 0;
-  color:#3b444b;
-	padding: 5px 10px 5px 12px;
-	width:100%;
-		}
-	.outgoing_msg{ overflow:hidden; margin:26px 20px 26px 30px;}
-	.sent_msg {
+.received_withd_msg p {
+  background: #fff192 none repeat scroll 0 0;
+  border-radius: 3px;
+  color: #3b444b;
+  font-family: Roboto regular, sans-serif;
+  font-size: 14px;
+  margin: 0;
+  padding: 5px 10px 5px 12px;
+  width: 100%;
+}
+
+.time_date {
+  color: #3b444b;
+  display: block;
+  font-size: 10px;
+  margin: 3px 0 0;
+  font-family: Roboto regular, sans-serif;
+}
+
+.received_withd_msg {
+  width: 70%;
+}
+
+.mesgs {
+  float: left;
+  padding: 30px;
+  width: 100%;
+}
+
+.sent_msg p {
+  background: #fece4b none repeat scroll 0 0;
+  font-family: Roboto regular, sans-serif;
+  border-radius: 3px;
+  font-size: 14px;
+  margin: 0;
+  color: #3b444b;
+  padding: 5px 10px 5px 12px;
+  width: 100%;
+}
+
+.outgoing_msg {
+  overflow: hidden;
+  margin: 26px 20px 26px 30px;
+}
+
+.sent_msg {
   float: right;
-	width: 70%;
+  width: 70%;
   text-align: right;
   margin-right: 10px;
-	}
-		.input_msg_write input {
-		  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-		  border: medium none;
-		  color: #4c4c4c;
-		  font-size: 15px;
-		  min-height: 48px;
-		  width: 100%;
-		}
+}
 
-		.type_msg {border-top: 1px solid #c4c4c4;position: relative; margin-top: 10px; width: 100%;}
-		.msg_send_btn {
-		  background: #fece4b none repeat scroll 0 0;
-		  border: medium none;
-		  border-radius: 50%;
-		  color: #ffff99;
-		  cursor: pointer;
-		  font-size: 17px;
-		  height: 33px;
-		  position: absolute;
-		  right: 0;
-		  top: 1px;
-		  width: 33px;
-		}
-		.messaging { background: #fff; width: 100%; }
-		.msg_history {
-		  height: 300px;
-		  overflow-y: auto;
-		}
-/*Responsiveness*/    
+.input_msg_write input {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  color: #4c4c4c;
+  font-size: 15px;
+  min-height: 48px;
+  width: 100%;
+}
+
+.type_msg {
+  border-top: 1px solid #c4c4c4;
+  position: relative;
+  margin-top: 10px;
+  width: 100%;
+}
+
+.msg_send_btn {
+  background: #fece4b none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 50%;
+  color: #ffff99;
+  cursor: pointer;
+  font-size: 17px;
+  height: 33px;
+  position: absolute;
+  right: 0;
+  top: 1px;
+  width: 33px;
+}
+
+.messaging {
+  background: #fff;
+  width: 100%;
+}
+
+.msg_history {
+  height: 300px;
+  overflow-y: auto;
+}
+
+/*Responsiveness*/
+
 @media only screen and (max-height: 590px) {
-  .msg_history {height: 250px; overflow-y: auto;}
-}   
-@media only screen and (min-height: 600px) {
-  .msg_history {height: 340px; overflow-y: auto;}
-          
+  .msg_history {
+    height: 250px;
+    overflow-y: auto;
+  }
 }
-@media only screen and (min-height: 660px) {
-  .msg_history {height: 370px; overflow-y: auto;}
-          
-}
-@media only screen and (min-height: 720px) {
-  .msg_history {height: 440px; overflow-y: auto;}
-           }             
-@media only screen and (min-height: 800px) {
-  .msg_history {height: 530px; overflow-y: auto;}
 
+@media only screen and (min-height: 600px) {
+  .msg_history {
+    height: 340px;
+    overflow-y: auto;
+  }
 }
+
+@media only screen and (min-height: 660px) {
+  .msg_history {
+    height: 370px;
+    overflow-y: auto;
+  }
+}
+
+@media only screen and (min-height: 720px) {
+  .msg_history {
+    height: 440px;
+    overflow-y: auto;
+  }
+}
+
+@media only screen and (min-height: 800px) {
+  .msg_history {
+    height: 530px;
+    overflow-y: auto;
+  }
+}
+
 @media only screen and (min-width: 992px) {
   .msg_history {
     height: 300px;
     overflow-y: auto;
-
   }
- }
+}
+
 @media only screen and (min-width: 1200px) {
   .msg_history {
     height: 300px;
     overflow-y: auto;
-
   }
 }
