--- a/css/student_css/style_studNav.css
+++ b/css/student_css/style_studNav.css
@@ -1,310 +1,345 @@
 /* Static Page */
-*{
-    margin: 0;
-    padding: 0;
-    user-select: none;
-    box-sizing: border-box;
-    list-style: none;  
-  }
-  
-  /* Body */
-  body{  
-    font-family: Roboto,Roboto Thin,Generica, sans-serif;  
-    background-image: url("../../img/studentBG.png");
-    background-size: cover;
-    font-size: 100%;
-    background-attachment: fixed;
-    width: auto;
-    min-height: 100%;
-    margin-bottom: 50px;
-  }
-  
-  /* Top Navigation */
-  nav{
-    background: #f8f8f8;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
-                0 3px 6px rgba(0, 0, 0, .23);
-    width: 100%;
-    z-index: 500;
-    position: sticky;
-    top: 0;
-  }
 
-  nav img.Auser-profile {
-    margin-top: 0px;
-    height: 40px;
-    width: 40px;
+* {
+  margin: 0;
+  padding: 0;
+  user-select: none;
+  box-sizing: border-box;
+  list-style: none;
 }
 
-  nav:after{
-    content: '';
-    clear: both;
-    display: table;
-  }
-  h2.aLogo-txt1{
-    margin-top: 3px;
-    font-family: Roboto Regular, sans-serif;
-    font-weight: inherit;
-    font-size: 100%;
-    margin-bottom: 0px;
-    letter-spacing: 6px;
-    text-decoration: none;
-    color: #1b1b1b;
-  }
-  h2.aLogo-txt1 a{
-    text-decoration: none;
-    color: #1b1b1b;
-  }
-  h3.aLogo-txt2{
-    margin-top: 0px;
-    color: #1b1b1b;
-    padding-top: 5px;
-    font-weight: inherit;
-    font-size: 100%;
-    margin-bottom: 0px;
-    letter-spacing: 6px;
-    font-family: Generica regular, sans-serif;
-  }
-  h3.aLogo-txt2 a{
-    text-decoration: none;
-    color: #1b1b1b;
-  }
-  div.aLogo{
-    float: left;
-    position: relative;
-    line-height: 80px;
-    margin-top: 14px;
-    margin-left: 40px;
-  }
-  nav ul{
-    float: right;
-    padding: 0;
-    height: 80px;
-    margin-bottom: 0;
-    list-style: none;
-    position: relative;
-    text-align: center;
-    z-index: 4;
-  }
-  nav ul li{ /*Accounts, Election, Candidates, etc*/
-    /* float: left; */
-    display: inline-block;
-    height: 80px; /*80px ang dati*/
-    /* background-color: #ffc423; */
-    text-align: center;
-    /* margin: 0 5px; */
-    width: 150px;
-  }
-  nav ul li a{
-    color: #1b1b1b;
-    line-height: 70px;
-    text-decoration: none;
-    font-size: 1.2em;
-    padding: 8px 15px;
-    letter-spacing: 1px;
-    font-family: Roboto Light, sans-serif;
-    text-decoration:none;
-  }
-  nav ul li a:visited {
-    color: #1b1b1b;
-    text-decoration: none;
-  }
-  nav ul li a:hover{
-    color: #1b1b1b;
-    text-decoration: none;
-  }
-  nav ul li a:active{
-    text-decoration: none;
-  }
-  nav ul li:hover{
-    background-color: #ffc423;
-  }
-  nav ul li a:active {
-    color: #1b1b1b;
-    text-decoration:none;
-  }
-  nav ul ul{ /*dropdown container*/
-    position: absolute;
-    top: 90px;
-    border-top: 3px solid #124254;
-    opacity: 0;
-    visibility: hidden;
-    transition: top .3s;
-  }
-  nav ul ul li{ /*dropdown list*/
-   background: #18566e;
-   height: 50px;
-   position: relative;
-   margin: 0px;
-   float: none;
-   display: list-item;
-   font-size: 0.8em;
-  }
-  nav ul ul li a{
-    line-height: 50px;
-    text-decoration: none;
-  }
-  nav ul ul li .logout::before {
-    content: "\f2f5";
-    font-family: "Font Awesome 5 Free";
-    padding: 0 10px 0 0;
-  }
-  nav ul ul li a:link{
-    color:white;
-    text-decoration:none;
-  }
-  nav ul ul li a:visited {
-    color: white;
-    text-decoration: none;
-  }
-  nav ul ul li a:hover{
-    color: white;
-    box-shadow: none;
-    text-decoration: none;
-  }
-  nav ul ul li:hover{
-    background-color: #124254;
-    text-decoration: none;
-  }
-  nav ul ul li a:active{
-    color: #1b1b1b;
-    box-shadow: none;
-    text-decoration: none;
-  }
-  nav ul ul ul{
-    border-top: none;
-  }
-  nav ul ul ul li{
-    position: relative;
-    top: -60px;
-    left: 150px;
-  }
-  nav ul li:hover > ul{
-    top: 70px;
-    opacity: 1;
-    visibility: visible;
-  }
-  nav ul ul li{
-    background: #18566e;
-    position: relative;
-    margin: 0px;
-    width: 150px;
-    font-size: .9rem;
-    float: none;
-    display: list-item;
-    border-bottom: 1px solid rgba(0,0,0,0.3);
-    z-index: 2;
-  }
-  nav ul ul li a{
-    line-height: 50px;
-    font-family: Roboto bold, sans-serif;
-    text-decoration: none;
-  }
-  nav ul ul ul li{
-    position: relative;
-    font-size: 1em;
-    top: -60px;
-    left: 150px;
-  }
-  .Ashow, .ADicon{
-    display: none
-  }
-  
-  .nav-toggle1, .nav-toggle2, .nav-toggle3,
-  .nav-toggle4, .nav-toggle5, .nav-toggle6{
-    display: none;
-  }
-  /* .fa-plus{
+/* Body */
+
+body {
+  font-family: Roboto, Roboto Thin, Generica, sans-serif;
+  background-image: url("../../img/studentBG.png");
+  background-size: cover;
+  font-size: 100%;
+  background-attachment: fixed;
+  width: auto;
+  min-height: 100%;
+  margin-bottom: 50px;
+}
+
+/* Top Navigation */
+
+nav {
+  background: #f8f8f8;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .15), 0 3px 6px rgba(0, 0, 0, .23);
+  width: 100%;
+  z-index: 500;
+  position: sticky;
+  top: 0;
+}
+
+nav img.Auser-profile {
+  margin-top: 0px;
+  height: 40px;
+  width: 40px;
+}
+
+nav:after {
+  content: '';
+  clear: both;
+  display: table;
+}
+
+h2.aLogo-txt1 {
+  margin-top: 3px;
+  font-family: Roboto Regular, sans-serif;
+  font-weight: inherit;
+  font-size: 100%;
+  margin-bottom: 0px;
+  letter-spacing: 6px;
+  text-decoration: none;
+  color: #1b1b1b;
+}
+
+h2.aLogo-txt1 a {
+  text-decoration: none;
+  color: #1b1b1b;
+}
+
+h3.aLogo-txt2 {
+  margin-top: 0px;
+  color: #1b1b1b;
+  padding-top: 5px;
+  font-weight: inherit;
+  font-size: 100%;
+  margin-bottom: 0px;
+  letter-spacing: 6px;
+  font-family: Generica regular, sans-serif;
+}
+
+h3.aLogo-txt2 a {
+  text-decoration: none;
+  color: #1b1b1b;
+}
+
+div.aLogo {
+  float: left;
+  position: relative;
+  line-height: 80px;
+  margin-top: 14px;
+  margin-left: 40px;
+}
+
+nav ul {
+  float: right;
+  padding: 0;
+  height: 80px;
+  margin-bottom: 0;
+  list-style: none;
+  position: relative;
+  text-align: center;
+  z-index: 4;
+}
+
+nav ul li {
+  /*Accounts, Election, Candidates, etc*/
+  /* float: left; */
+  display: inline-block;
+  height: 80px;
+  /*80px ang dati*/
+  /* background-color: #ffc423; */
+  text-align: center;
+  /* margin: 0 5px; */
+  width: 150px;
+}
+
+nav ul li a {
+  color: #1b1b1b;
+  line-height: 70px;
+  text-decoration: none;
+  font-size: 1.2em;
+  padding: 8px 15px;
+  letter-spacing: 1px;
+  font-family: Roboto Light, sans-serif;
+  text-decoration: none;
+}
+
+nav ul li a:visited {
+  color: #1b1b1b;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: #1b1b1b;
+  text-decoration: none;
+}
+
+nav ul li a:active {
+  text-decoration: none;
+}
+
+nav ul li:hover {
+  background-color: #ffc423;
+}
+
+nav ul li a:active {
+  color: #1b1b1b;
+  text-decoration: none;
+}
+
+nav ul ul {
+  /*dropdown container*/
+  position: absolute;
+  top: 90px;
+  border-top: 3px solid #124254;
+  opacity: 0;
+  visibility: hidden;
+  transition: top .3s;
+}
+
+nav ul ul li {
+  /*dropdown list*/
+  background: #18566e;
+  height: 50px;
+  position: relative;
+  margin: 0px;
+  float: none;
+  display: list-item;
+  font-size: 0.8em;
+}
+
+nav ul ul li a {
+  line-height: 50px;
+  text-decoration: none;
+}
+
+nav ul ul li .logout::before {
+  content: "\f2f5";
+  font-family: "Font Awesome 5 Free";
+  padding: 0 10px 0 0;
+}
+
+nav ul ul li a:link {
+  color: white;
+  text-decoration: none;
+}
+
+nav ul ul li a:visited {
+  color: white;
+  text-decoration: none;
+}
+
+nav ul ul li a:hover {
+  color: white;
+  box-shadow: none;
+  text-decoration: none;
+}
+
+nav ul ul li:hover {
+  background-color: #124254;
+  text-decoration: none;
+}
+
+nav ul ul li a:active {
+  color: #1b1b1b;
+  box-shadow: none;
+  text-decoration: none;
+}
+
+nav ul ul ul {
+  border-top: none;
+}
+
+nav ul ul ul li {
+  position: relative;
+  top: -60px;
+  left: 150px;
+}
+
+nav ul li:hover>ul {
+  top: 70px;
+  opacity: 1;
+  visibility: visible;
+}
+
+nav ul ul li {
+  background: #18566e;
+  position: relative;
+  margin: 0px;
+  width: 150px;
+  font-size: .9rem;
+  float: none;
+  display: list-item;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  z-index: 2;
+}
+
+nav ul ul li a {
+  line-height: 50px;
+  font-family: Roboto bold, sans-serif;
+  text-decoration: none;
+}
+
+nav ul ul ul li {
+  position: relative;
+  font-size: 1em;
+  top: -60px;
+  left: 150px;
+}
+
+.Ashow, .ADicon {
+  display: none
+}
+
+.nav-toggle1, .nav-toggle2, .nav-toggle3, .nav-toggle4, .nav-toggle5, .nav-toggle6 {
+  display: none;
+}
+
+/* .fa-plus{
     font-size: 15px;
     margin-left: 40px;
   } */
-  
-  @media all and (max-width: 968px) {
-    nav ul{
-      margin-right: 0px;
-      margin-left: 0px;
-      float: left;
-    }
-    nav .aLogo{
-      margin-bottom: 3%;
-      width: auto;
-      float: left;
-    }
-    .Ashow + a, ul{
-      display: none;
-    }
-    nav ul li,nav ul ul li{
-      display: block;
-      width: 100%;
-      background-color:  #18566e;
-      color:white; 
-    }
-    #Ashow1{
-      color: white;
-    }
-    #Ashow1:hover{
-      color: black;
-    }
-    nav ul li a:hover{
-      box-shadow: none;
-      text-decoration: none;
-      color:black;
-    }
-    .Ashow{
-      display: block;
-      color: white;
-      font-size: 1.2em;
-      padding: 0 20px;
-      line-height: 70px;
-      cursor: pointer;
-    }
-    .Ashow:hover{
-      /* color:white; */
-      color: #000000;
-    }
-    .ADicon{
-      display: block;
-      /* color:#ffffff; */
-      position: absolute;
-      top: 0;
-      right: 40px;
-      line-height: 70px;
-      cursor: pointer;
-      font-size: 25px;
-    }
-    nav ul ul{
-      top: 70px;
-      border-top: 0px;
-      border-bottom: 0px;
-      float: none;
-      position: static;
-      display: none;
-      opacity: 1;
-      visibility: visible;
-    }
-    nav ul ul a{
-      left: 0;
-    }
-    /* nav ul ul ul a{
+
+@media all and (max-width: 968px) {
+  nav ul {
+    margin-right: 0px;
+    margin-left: 0px;
+    float: left;
+  }
+  nav .aLogo {
+    margin-bottom: 3%;
+    width: auto;
+    float: left;
+  }
+  .Ashow+a, ul {
+    display: none;
+  }
+  nav ul li, nav ul ul li {
+    display: block;
+    width: 100%;
+    background-color: #18566e;
+    color: white;
+  }
+  #Ashow1 {
+    color: white;
+  }
+  #Ashow1:hover {
+    color: black;
+  }
+  nav ul li a:hover {
+    box-shadow: none;
+    text-decoration: none;
+    color: black;
+  }
+  .Ashow {
+    display: block;
+    color: white;
+    font-size: 1.2em;
+    padding: 0 20px;
+    line-height: 70px;
+    cursor: pointer;
+  }
+  .Ashow:hover {
+    /* color:white; */
+    color: #000000;
+  }
+  .ADicon {
+    display: block;
+    /* color:#ffffff; */
+    position: absolute;
+    top: 0;
+    right: 40px;
+    line-height: 70px;
+    cursor: pointer;
+    font-size: 25px;
+  }
+  nav ul ul {
+    top: 70px;
+    border-top: 0px;
+    border-bottom: 0px;
+    float: none;
+    position: static;
+    display: none;
+    opacity: 1;
+    visibility: visible;
+  }
+  nav ul ul a {
+    left: 0;
+  }
+  /* nav ul ul ul a{
       padding-left: 80px;
     }
     nav ul ul ul li{
       position: static;
     } */
-    [id^=btn]:checked + ul{
-      width: 100%;
-      left: 0;
-      display: block;
-    }
-    nav ul ul li{
-      border-top: 0px;
-      border-bottom: 0px;
-    }
-    span.cancel:before{
-      content: '\f00d';
-    } 
+  [id^=btn]:checked+ul {
+    width: 100%;
+    left: 0;
+    display: block;
   }
-  
+  nav ul ul li {
+    border-top: 0px;
+    border-bottom: 0px;
+  }
+  span.cancel:before {
+    content: '\f00d';
+  }
+}
+
 /*   
   Left Content
   article p{
@@ -369,9 +404,10 @@
       flex-direction: column;
     }
   } */
-  
-  /*countdown*/
-  /* aside{
+
+/*countdown*/
+
+/* aside{
     color: #333;
     float: left;
     text-align: center;
@@ -421,11 +457,10 @@
     overflow: auto;
     padding-bottom: 5%;
   } */
-  
-  
-  
-  /* Footer */
-  /* footer{
+
+/* Footer */
+
+/* footer{
     position: fixed;
     background-color: #fece4b;
     height: 5%;
@@ -437,23 +472,25 @@
     z-index: 500;
   } */
 
-  .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: auto;
-    padding: 10px 5px 10px 5px;
-    background-color: #fece4b;
-    text-align: center;
-    z-index: 500;   /* para very front lagi ang footer */
-  }
-  div p.footer-txt{
-    position: relative;
-    margin-top: auto;
-    margin-bottom: auto;
-    font-family: Roboto Regular, sans-serif;
-    letter-spacing: 7px;
-    font-size: 10px;
-    /* color: #ffffff; */
-  }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  padding: 10px 5px 10px 5px;
+  background-color: #fece4b;
+  text-align: center;
+  z-index: 500;
+  /* para very front lagi ang footer */
+}
+
+div p.footer-txt {
+  position: relative;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-family: Roboto Regular, sans-serif;
+  letter-spacing: 7px;
+  font-size: 10px;
+  /* color: #ffffff; */
+}
