--- a/css/student_css/vote_ballot.css
+++ b/css/student_css/vote_ballot.css
@@ -1,5 +1,6 @@
 /* Voting Page */
-#F-header{
+
+#F-header {
   font-family: Generica regular, sans-serif;
   color: #124254;
   font-weight: inherit;
@@ -10,84 +11,86 @@
   margin-top: 50px;
 }
 
-#F-container{
+#F-container {
   max-width: max-content;
   /* width:900px; */
-  border:3px;
+  border: 3px;
   border-radius: 30px;
-  background-color:#eeeeee;
-  margin:0 auto;
-  margin-top:40px;
+  background-color: #eeeeee;
+  margin: 0 auto;
+  margin-top: 40px;
   position: relative;
   box-shadow: 3px 3px 15px 0;
 }
 
-.candidate-box{
+.candidate-box {
   display: flex;
   flex-direction: row;
   width: 1000px;
   padding: 20px;
 }
 
-.candidate-box > div{
+.candidate-box>div {
   width: 1000px;
   margin: auto;
 }
 
-.candidate-info{
+.candidate-info {
   margin-top: 20px;
   align-items: center;
 }
 
-#F-position{
+#F-position {
   width: 100%;
   font-size: 22px;
   text-indent: 25px;
   color: #124254;
-  padding:5px 0;
+  padding: 5px 0;
   font-weight: 500;
   font-family: 20px Roboto light sans-serif;
 }
 
-hr{
+hr {
   border: 1px solid #888282;
 }
 
-#F-CandidateName{
+#F-CandidateName {
   font-size: 18px;
   color: #124254;
   font-weight: 900;
   font-family: Roboto regular, sans-serif;
 }
 
-#F-GradeSection{
+#F-GradeSection {
   font-size: 16px;
   color: #124254;
   font-weight: 500;
   font-family: Roboto regular, sans-serif;
 }
 
-#F-Partylist{
+#F-Partylist {
   font-size: 16px;
   color: black;
   font-weight: 500;
   font-family: Roboto regular, sans-serif;
 }
-img{
+
+img {
   /* z-index: 5; */
 }
 
-img.candidate-photo{
+img.candidate-photo {
   border-radius: 50%;
   margin-left: 30px;
   border: 3px solid #124254;
   margin: 5px 20px 0 5px;
-  position:sticky;
+  position: sticky;
   display: block;
   /* z-index: 5; */
 }
 
 /* The container */
+
 .checkbox {
   display: block;
   position: relative;
@@ -101,6 +104,7 @@ img.candidate-photo{
 }
 
 /* Hide the browser's default radio button */
+
 .checkbox input {
   position: absolute;
   opacity: 0;
@@ -108,6 +112,7 @@ img.candidate-photo{
 }
 
 /* Create a custom radio button */
+
 .checkmark {
   position: absolute;
   top: 0;
@@ -123,17 +128,20 @@ img.candidate-photo{
 }
 
 /* On mouse-over, add a grey background color */
-.checkbox:hover input ~ .checkmark {
+
+.checkbox:hover input~.checkmark {
   background-color: rgb(150, 145, 145);
   opacity: 5px;
 }
 
 /* When the radio button is checked, add a blue background */
-.checkbox input:checked ~ .checkmark {
+
+.checkbox input:checked~.checkmark {
   background-color: #18566e;
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
+
 .checkmark:after {
   content: "";
   position: absolute;
@@ -141,52 +149,54 @@ img.candidate-photo{
 }
 
 /* Show the indicator (dot/circle) when checked */
-.checkbox input:checked ~ .checkmark:after {
+
+.checkbox input:checked~.checkmark:after {
   display: block;
 }
 
 /* Style the indicator (dot/circle) */
+
 .checkbox .checkmark:after {
- 	top: 6px;
-	left: 6px;
-	width: 8px;
-	height: 8px;
-	border-radius: 50%;
-	background: #fece4b;
+  top: 6px;
+  left: 6px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: #fece4b;
 }
 
-#Candidate1{
-  width:1000px;
+#Candidate1 {
+  width: 1000px;
   height: 200px;
-  border:3px;
+  border: 3px;
   border-radius: 30px;
-  background-color:#eeeeee;
-  margin:0 auto;
-  margin-top:50px;
+  background-color: #eeeeee;
+  margin: 0 auto;
+  margin-top: 50px;
   position: relative;
   z-index: -1;
   box-shadow: 3px 3px 15px 0;
 }
-  
-#Candidate1 h1{
-  width:100%;
-  text-indent:10px;
-  padding:5px 0;
-  font:bold 20px Roboto Light, sans-serif;
-  color:#124254;
+
+#Candidate1 h1 {
+  width: 100%;
+  text-indent: 10px;
+  padding: 5px 0;
+  font: bold 20px Roboto Light, sans-serif;
+  color: #124254;
 }
 
-#vote-button{
+#vote-button {
   text-align: center;
 }
 
-.vote-btn{
-  font:bold 16px Roboto Light, sans-serif;
+.vote-btn {
+  font: bold 16px Roboto Light, sans-serif;
   color: #eeeeee;
   letter-spacing: 3px;
   width: 200px;
   height: 50px;
-  background-color:#124254;
+  background-color: #124254;
   margin-top: 40px;
   margin-bottom: 50px;
   border: 2px solid #124254;
@@ -194,55 +204,68 @@ img.candidate-photo{
   position: relative;
 }
 
-.vote-btn:hover{
+.vote-btn:hover {
   color: #fece4b;
-  background-color:#124254;
+  background-color: #124254;
   border: 2px solid #fece4b;
   border-radius: 30px;
 }
 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-@media (max-width: 1200px){
-  header{
+
+@media (max-width: 1200px) {
+  header {
     text-align: center;
   }
-  #F-container{
+  #F-container {
     min-width: 90%;
     position: relative;
   }
-  .candidate-box{
+  .candidate-box {
     flex-direction: column;
     width: 100%;
   }
-  .candidate-box > div{
+  .candidate-box>div {
     width: 100%;
     margin-bottom: 5%;
   }
-  }
+}
 
-@media screen and (max-width: 450px){
-    .candidate-info{
-      display: inline-block;
-    }
+@media screen and (max-width: 450px) {
+  .candidate-info {
+    display: inline-block;
   }
+}
 
 /* Start of Vote Preview css */
+
 /* The Modal (background) */
+
 .F-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
   left: 0;
   top: 80px;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
 
 /* Modal Content */
+
 .F-modal-content {
   position: relative;
   background-color: #fefefe;
@@ -253,32 +276,41 @@ img.candidate-photo{
   min-width: 400px;
   height: auto;
   overflow: auto;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s;
   /* margin-left: 10px; */
-
 }
 
 /* Add Animation */
+
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0
+  }
+  to {
+    top: 0;
+    opacity: 1
+  }
 }
 
 @keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0
+  }
+  to {
+    top: 0;
+    opacity: 1
+  }
 }
-
-
 
 .F-modal-header {
   padding: 2px 16px;
   background-color: white;
- 
 }
 
 .F-modal-body {
@@ -291,7 +323,6 @@ img.candidate-photo{
 .F-modal-button {
   padding: 2px 16px;
   background-color: white;
- 
 }
 
 .F-modal-button button {
@@ -305,6 +336,7 @@ img.candidate-photo{
 }
 
 /* Return Button */
+
 .F-returnBTN {
   float: left;
   background-color: #eeeeee;
@@ -317,6 +349,7 @@ img.candidate-photo{
   letter-spacing: 1px;
   cursor: pointer;
 }
+
 .F-returnBTN span {
   cursor: pointer;
   display: inline-block;
@@ -343,6 +376,7 @@ img.candidate-photo{
 }
 
 /* Confirm Button */
+
 .F-confirmBTN {
   float: right;
   font: bold Roboto Light, sans-serif;
@@ -398,13 +432,14 @@ img.candidate-photo{
   font-family: Roboto Regular, sans-serif;
 }
 
-#F-preview-Position{
+#F-preview-Position {
   font-size: 16px;
   color: black;
   font-family: Roboto Regular, sans-serif;
 }
 
 /* Go to Home Button */
+
 .F-goToHomeBTN {
   float: left;
   background-color: #eeeeee;
@@ -419,6 +454,7 @@ img.candidate-photo{
 }
 
 /* Download Receipt Button */
+
 .F-downloadReceiptBTN {
   float: right;
   background-color: #ffc423;
@@ -431,34 +467,33 @@ img.candidate-photo{
   cursor: pointer;
 }
 
-@media (max-width: 1200px){
-  .F-modal{
+@media (max-width: 1200px) {
+  .F-modal {
     top: 30px;
   }
-  
   .F-modal-content {
     position: relative;
     overflow: auto;
     min-width: 80%;
   }
-  
 }
 
-@media screen and (max-width: 540px){
-  .F-modal-button{
+@media screen and (max-width: 540px) {
+  .F-modal-button {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .F-returnBTN{
+  .F-returnBTN {
     margin-right: 15px;
   }
 }
 
-@media screen and (max-width: 320px){
-  .F-modal-content{
+@media screen and (max-width: 320px) {
+  .F-modal-content {
     min-width: 90%;
   }
 }
+
 /* End of vote preview css  */
